syntax = "proto3";

option go_package = "/service";

message Message {
  string body = 1;
}

message WalletCreate {
  string walletName = 1;
  int64 balance = 2;
}

message SendMoney {
  string walletSender = 1;
  string walletRecipient = 2;
  int64 sendMoney = 3;
}

service GrpcService {
  rpc GetWallet(Message) returns (Message) {}
  rpc CreateWallet(WalletCreate) returns (Message) {}
  rpc SendMoneyWallet(SendMoney) returns (Message) {}
}